test/invalid/idl/constructor.webidl
[Exposed=Window,
 Constructor(optional Union union)]
interface X {
};
